//protoc -I ./ --go_out=plugins=grpc:./ ./test.proto
/*
 * cd citychain
 * protoc -I=. -I=ccapi/grpc/proto  --go_out=plugins=grpc:./ ccapi/grpc/proto/city.proto
 */


syntax = "proto3";

package cityapi;
option go_package = "github.com/scryinfo/citychain-s/ccapi/grpc/go_out/cityapi";

import "global_def.proto";

//保证通知收到,若没有成功，则一直通知
service CityS {
    //充值通知 todo 通知状态 返回成功确认通知
    rpc RechargeResult (RechargeResultReq) returns (RechargeResultRes);
    //转账通知,合约上链通知，雇佣NPC通知
//    rpc DischargeResult(NormalEventReq) returns(NormalEventRes);
}
message RechargeResultRes {
    ccapi.ResHeader ResHeader  = 1;
}

message RechargeResultReq {
    ccapi.ReqHeader ReqHeader = 1;
    ccapi.ErrCode ErrCode = 2;
    string ErrMsg =3;
    string CityPurchaseId = 4;
    string CccTokenAmount =5; //带小数点 精度4 、ddd->ccc 1：1
    string LastBlockId=6;
}




